<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="tvEntity"
            type="com.example.moviesjetpack.model.source.local.entity.TvEntity" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"

            android:layout_height="192dp"
            android:layout_width="match_parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"

                app:contentScrim="?attr/colorPrimary">

                <ImageView
                    android:id="@+id/td_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:poster_path="@{tvEntity.backdrop_path}"
                    android:src="@android:drawable/sym_def_app_icon"
                    android:scaleType="centerCrop" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"></androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.tvs.TvDetailActivity">

                <ImageView
                    android:id="@+id/tvd_im_poster"
                    android:layout_width="150dp"
                    android:layout_height="225dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:poster_path="@{tvEntity.poster_path}"
                    tools:srcCompat="@tools:sample/backgrounds/scenic[16]" />

                <TextView
                    android:id="@+id/tvd_tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:maxLines="2"
                    android:text="@{tvEntity.name}"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvd_im_poster"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/title" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="Release Date"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tvd_im_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tvd_tv_title" />

                <TextView
                    android:id="@+id/tvd_tv_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{tvEntity.first_air_date}"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvd_im_poster"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textViewd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvd_im_poster" />

                <TextView
                    android:id="@+id/tvd_tv_overview"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:maxLines="5"
                    android:text="@{tvEntity.overview}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewd"
                    tools:text="@string/description" />

                <RatingBar
                    android:id="@+id/tvd_rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toEndOf="@+id/tvd_im_poster"
                    android:numStars="5"
                    android:stepSize="0.1"
                    app:vote_average="@{tvEntity.vote_average}"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="Rating"
                    app:layout_constraintStart_toEndOf="@+id/tvd_im_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tvd_tv_release_date" />

                <TextView
                    android:id="@+id/tvd_tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{tvEntity.vote_average}"
                    app:layout_constraintStart_toEndOf="@+id/tvd_im_poster"
                    app:layout_constraintTop_toBottomOf="@+id/tvd_rating_bar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
